# birdclef_2026

./: .dockerignore  .gitignore  COMPETITION_INFO.md  Dockerfile  Dockerfile.fusion  Dockerfile.tflite  GEMINI.md  README.md  bootstrap.sh  deploy_all.sh  deploy_fusion.sh  deploy_tflite_v2.sh  deploy_v2_local.sh  job_config.yaml  job_config_birdnet.yaml  job_config_fusion.yaml  job_config_v1.yaml  job_config_v2.yaml  pyproject.toml  smoke_test_fusion.sh
birdclef_2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CLOUD_COMPUTE.md  COMPETITION_INFO.md  DATA_PIPELINE.md  DATA_PLAN.md  DATA_STRATEGY_JIRA.md  FUSION_MODEL_PLAN.md  HANDOFF_NOTES.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_ROADMAP.md  MODELING_PLAN.md  SOUNDSCAPE_REFINEMENT_GUIDE.md  STRATEGY_1S_STITCHING.md  STRATEGY_5S_UNIFIED.md  STRATEGY_ENSI_LIGHTWEIGHT.md  TRAINING_VALIDATION_PLAN.md  UNIFIED_5S_IMPLEMENTATION_JIRA.md  UNIFIED_5S_RESOLUTION_STRATEGY.md  UNIFIED_PIPELINE_SYNERGIES.md
infrastructure/docker/: Dockerfile  Dockerfile.birdnet  Dockerfile.v1
notebooks/: 01_perch_baseline_eda.ipynb  02_eda_deep_dive.ipynb  02_spectrogram_eda.ipynb  03_temporal_migratory_eda.ipynb  04_birdnet_embeddings_eda.ipynb  05_embeddings_comparison_eda.ipynb  birdclef2026-public-blend-v2.ipynb  birdclef26-google-perch-starter.ipynb
scripts/: eda_train_vs_soundscape.py  fix_perch_eda.py  reproduce_v2_issue.py
src/: vertex_test_perch_v2.py  vertex_test_perch_v2_cpu.py  vertex_test_perch_v2_tflite.py
src/audio/: analyze_migrants.py  download_embeddings.py  extract_embeddings.py  extract_embeddings_birdnet.py  (+9 more)
(+25 files in other folders)
