[project]
name = "birdclef-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "google-cloud-storage>=3.9.0",
    "jupyterlab>=4.5.6",
    "kaggle==2.0.0",
    "kagglehub>=1.0.0",
    "librosa<=0.11.0",
    "llvmlite<=0.43.0",
    "matplotlib>=3.9.4",
    "numba<=0.60.0",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless<4.10",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
    "setuptools<70",
    "soundfile>=0.13.1",
    "tensorflow>=2.15.0",
    "tensorflow-hub>=0.16.1",
    "tensorflow-text>=2.15.0",
    "timm>=1.0.25",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.3",
]
